--- a/src/styles/config/reset.sass
+++ b/src/styles/config/reset.sass
@@ -4,6 +4,7 @@
   padding: 0
   margin: 0
   box-sizing: border-box
+  font-display: swap !important
   font-family: 'Nunito', sans-serif
   font-size: 16px
   line-height: 26px
