--- a/src/styles/components/UI/form.sass
+++ b/src/styles/components/UI/form.sass
@@ -16,8 +16,6 @@
   padding: 14px 16px
 
 .input-wrapper
-  span
-    color: red
   &--
     &label
       padding-left: 16px
@@ -25,3 +23,7 @@
       font-size: 12px
       line-height: 14px
       padding-top: 4px
+
+.validation-error
+  color: red !important
+  text-align: start !important
