--- a/src/styles/components/UI/radio-bar.sass
+++ b/src/styles/components/UI/radio-bar.sass
@@ -1,7 +1,5 @@
 .radio-bar
   margin-top: 25px
-  span
-    color: red
 
 .radio-wrapper
   margin-top: 11px
@@ -35,5 +33,6 @@
       display: flex
       justify-content: center
       align-items: center
+      cursor: pointer
       &:before
         content: ''
