--- a/src/styles/components/UI/form.sass
+++ b/src/styles/components/UI/form.sass
@@ -12,8 +12,13 @@
   height: 54px
   border: 1px solid $c-light-grey
   background-color: transparent
+  outline: none
   border-radius: 4px
   padding: 14px 16px
+  transition: .7s
+  &:focus, &:active
+    transition: .7s
+    border: 1px solid black
 
 .input-wrapper
   &--
